--- a/index.html
+++ b/index.html
@@ -14,3 +14,10 @@
     <footer></footer>
 </body>
 </html>
+
+
+<audio src="https://www.w3schools.com/tags/horse.mp3"
+			controls
+			autoplay
+			preload="autoplay">
+			</audio>
